--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,9 @@ python-dateutil==2.7.2
 python-dotenv==0.8.2
 python-editor==1.0.3
 pytz==2018.3
+redis==2.10.6
 requests==2.18.4
+rq==0.10.0
 six==1.11.0
 SQLAlchemy==1.2.5
 urllib3==1.22
