--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ elasticsearch==6.2.0
 Flask==0.12.2
 Flask-Babel==0.11.2
 Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==3.2.3
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
@@ -16,11 +17,13 @@ Flask-Moment==0.6.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 guess-language-spirit==0.5.3
+httpie==0.9.9
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 Mako==1.0.7
 MarkupSafe==1.0
+Pygments==2.2.0
 PyJWT==1.6.1
 python-dateutil==2.7.2
 python-dotenv==0.8.2
